--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 
 <body>
-    <h1>ymj blog</h1>
+    <h1>yuanmj's blog</h1>
+    <h2>1.简介</h2>
     <p>This is my blog.</p>
-    <p>大坏蛋</p>
+    <p>生于 山东临沂</p>
+    <p>现在在 山东济南工作</p>
+    <h2>2.座右铭</h2>
+    <p>学海无涯</p>
+     <p>求知若渴，虚心若愚</p>
 </body>
 
 </html>
